--- a/Sobre.html
+++ b/Sobre.html
@@ -12,11 +12,46 @@
 </head>
 
 <body>
-    Sobre
+    <header class="mx-auto mb-1" id="cabecalho"></header>
+
+    <div class="container border">
+        <div class="mx-auto" id="sobre-box">
+            <div id="sobre-box-title">
+                <h2>Sobre nós</h2>
+            </div>
+            <div id="sobre-box-text">
+                <p>
+                    Música Em Ação é uma plataforma dedicada à divulgação de eventos e projetos culturais gratuitos relacionados
+                    à música. Idealizado por um experiente músico e professor de música com mais de 10 anos de atuação na
+                    educação musical, nosso projeto nasceu do desejo de promover a inclusão social e o desenvolvimento cultural
+                    em comunidades vulneráveis.
+                </p>
+                <p>
+                    Ao longo de sua carreira, nosso fundador esteve à frente de diversos projetos culturais, como baterias de
+                    samba, percussão corporal e produção musical. Sua expertise em combinar habilidades musicais e pedagógicas
+                    resulta em iniciativas transformadoras que conectam e engajam pessoas, promovendo o acesso à cultura e à
+                    educação musical.
+                </p>
+                <p>
+                    Nosso público-alvo inclui instituições culturais, professores de música, comunidades carentes, participantes
+                    dos projetos (crianças, jovens, adultos) e patrocinadores e apoiadores culturais. Com uma interface simples
+                    e intuitiva, nossa plataforma facilita a conexão entre professores e público, além de promover uma maior
+                    visibilidade para os projetos através da integração com redes sociais.
+                </p>
+                <p>
+                    Nosso objetivo é oferecer um espaço acessível para que instituições e educadores possam divulgar seus
+                    projetos, alcançando um público mais amplo e engajando a comunidade em torno da música e da cultura.
+                    Acreditamos no poder transformador da música e trabalhamos para que mais pessoas possam ter acesso a essas
+                    experiências enriquecedoras.
+                </p>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script src="js\script.js"></script>
+    <script src="js\script.js"></script>
 </body>
 
 </html>
